Garbage Collector: Switch to ZGC
Links:
- https://wiki.openjdk.java.net/display/zgc/Main
- https://bugs.openjdk.java.net/browse/JDK-8209683